# Budget-Tracker-Backend

./: .dockerignore  Cargo.toml  Dockerfile  README.md
migrations/2023-03-04-085530_create_users/: up.sql
scripts/: update-database-url.py
src/: catcher.rs  main.rs  schema.rs
src/api/: mod.rs  user.rs  version.rs
src/api/helpers/: mod.rs  responses.rs  token.rs
src/database/: connect.rs  mod.rs  users.rs
src/helpers/: hash.rs  mod.rs  user_id_generator.rs
src/middleware/: auth.rs  cors.rs  mod.rs
src/models/: user.rs
