[package]
name = "Budget-Tracker-Backend"
version = "0.1.0"
edition = "2021"
authors = ["Vikaheimo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.14.0"
diesel = {version = "2.0.3", features = ["mysql"]}
dotenv = "0.15.0"
hmac = "0.12.1"
jwt = "0.16.0"
lazy_static = "1.4.0"
nanoid = "0.4.0"
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.6"
